--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.24.4",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-pngquant": "^1.0.12",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1"
   }
